resizing responsitivity for graphics component

--- a/src/index.css
+++ b/src/index.css
@@ -287,3 +287,13 @@ a {
   text-decoration: none !important;
   color: black !important;
 }
+
+.graphics {
+  position: relative;
+  height: 100%;
+  background-image: url("assets/vintage-pink-and-cream-dark-floral-plain-820x532\ 3.png");
+}
+
+.special-border {
+  border: 1px solid white;
+}
