--- a/src/index.css
+++ b/src/index.css
@@ -233,7 +233,7 @@ input {
 
 .input-sizing-color {
   height: 35px;
-  width: 175px;
+  width: 188px;
 }
 
 input::placeholder {
@@ -273,9 +273,10 @@ input::placeholder {
 }
 
 .results {
-  width: 93%;
+  width: 188px;
   height: 40px;
   text-align: left;
+  background-color: white;
   border: 1px solid #E4E4E4;
 }
 
@@ -290,10 +291,69 @@ a {
 
 .graphics {
   position: relative;
-  height: 100%;
+  height: 1200px;
   background-image: url("assets/vintage-pink-and-cream-dark-floral-plain-820x532\ 3.png");
 }
 
 .special-border {
   border: 1px solid white;
+}
+
+.modal-button {
+  padding: 0;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  /* width: 20px !important;
+  height: 40px; */
+}
+
+.modal-div {
+  position: sticky;
+  top: 55px;
+  left: 95vw;
+  z-index: 10;
+  /* padding: 0; */
+  width: fit-content !important;
+  height: fit-content !important;
+  /* overflow: hidden; */
+}
+
+.modal-contents {
+  position: absolute;
+  top: 40px;
+  background-color: rgba(255, 255, 255, 0.95);
+  border-radius: 5px;
+  border: 2px solid black;
+  /* height: fit-content; */
+}
+
+.animatronics {
+  display: block;  visibility: visible;
+  transform: translateX(-200px);
+  transition: all 0.25s;
+}
+
+.no-more-display {
+  transition: all 0.25s;
+  transform: translateX(100px);
+  visibility: hidden;
+}
+
+.basic-modal {
+  position: relative;
+  border: 1px solid red;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 5px;
+  left: -30px;
+  width: 30px;
+  height: 60px;
+  padding: 0;
+  border-radius: 10px 0 0 10px;
+  border: 2px solid black;
+  /* border-right-color: white; */
+  background-color: #f4b7d4;
 }
