--- a/src/index.css
+++ b/src/index.css
@@ -233,7 +233,8 @@ input {
 
 .input-sizing-color {
   height: 35px;
-  width: 188px;
+  width: 25px;
+  transition: width 0.1s ease-out;
 }
 
 input::placeholder {
@@ -243,7 +244,11 @@ input::placeholder {
 }
 
 .no {
-  display: none;
+  visibility:hidden;
+}
+
+.garuda-showdown {
+  width: 188px;
 }
 
 .fontista {
@@ -321,10 +326,10 @@ a {
 
 .modal-contents {
   position: absolute;
-  top: 40px;
+  top: 35px;
   background-color: rgba(255, 255, 255, 0.95);
   border-radius: 5px;
-  border: 2px solid black;
+  border: 1px solid black;
   /* height: fit-content; */
 }
 
@@ -357,7 +362,7 @@ a {
   height: 60px;
   padding: 0;
   border-radius: 10px 0 0 10px;
-  border: 2px solid black;
+  border: 1px solid black;
   /* border-right-color: white; */
   background-color: #f4b7d4;
 }
