--- a/src/index.css
+++ b/src/index.css
@@ -342,7 +342,9 @@ a {
   transition: all 0.25s;
   
 }
-
+.testColor {
+  /* border: 2px solid #f4b7d4; */
+}
 .no-more-display {
   transition: all 0.25s;
   transform: translateX(100px);
@@ -362,7 +364,7 @@ a {
   height: 60px;
   padding: 0;
   border-radius: 10px 0 0 10px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   /* border-right-color: white; */
   background-color: #f4b7d4;
 }
