--- a/src/index.css
+++ b/src/index.css
@@ -419,3 +419,33 @@ a {
   fill: #DB96F3;
   transform: scale(1.1);
 }
+
+.showcase-modal-prime {
+  /* min-width: 90%; */
+  /* max-height: 10vh; */
+  background-color: rgba(255, 0, 0, 0);
+  min-width: min(90vw, 900px);
+
+  /* min-width: 820px; */
+  /* display: flex; */
+  /* align-self: center; */
+  /* min-width: 90%; */
+  /* max-width: 820px; */
+
+
+}
+.actually {
+  /* width: 1820px; */
+  /* margin-top: -10px;
+  margin-bottom: -10px; */
+}
+
+.modal-image {
+  width: 100%;
+  height: auto;
+  margin-top: -10px;
+  margin-bottom: -10px;
+  /* max-width: 820px; */
+  /* max-height: 100vh; */
+  /* margin-left: auto; */
+}
